# simple-django-users

./: .editorconfig  .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/app/: celery.py  services.py  settings.py  urls.py
src/users/: admin.py  managers.py  models.py  serializers.py  services.py  tasks.py  tests.py  views.py
src/users/migrations/: 0001_initial.py
